atualização de educação complementar

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ div > a{
 hr{
     width: 900px;
     margin: auto;
+    margin-bottom: 2vw;
 }
 
 #bloco02{
@@ -88,10 +89,10 @@ hr{
     margin-left: 10%;
     
 }
-  #kkk> #container{
+  #kkk > #container{
     position: relative;
     left: 50%;
-    padding-bottom: 5px;
+    /* padding-bottom: 0px; */
 }
 
 #container::after{
@@ -144,14 +145,58 @@ footer > div{
     margin-top: 5px;
 }
 
+
+#principal-main{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  margin: 5vw;  
+  
+}
+
+#principal-main > #control01{
+    margin: 5px;
+    font-size: 26px;
+}
+ 
+ul > li{
+    font-size: 26px;
+}
+
+#principal-main > #control02{
+    margin: 5px;
+    font-size: 20px;
+}
+
+#principal-main > hr{
+   margin-top: 2vw;
+}
+.bloco00{
+    font-size: 20px;
+}
+.bloco00 > h2,p{
+    margin: 1vw;
+}
+.okok{
+    font-weight: bolder;
+}
+
+
+
+
+
+
+
                 /* responsividade */
 
                 /* 1°tela */
 
 @media screen and (min-width: 1024px) and (max-width: 1366px){
-    /* body{
+    body{
         border: 2px solid red;
-       } */
+       }
 
        /* .bloco03{
         display: flex;
@@ -162,13 +207,14 @@ footer > div{
 
                 /* 2°tela */
 @media screen and (min-width: 500px) and (max-width: 1024px){
- /* body{
+ body{
  border: 2px solid rgb(81, 255, 0);
-  } */
+  }
 
   hr{
     width: 700px;
     margin: auto;
+    margin-bottom: 3vw;
 }
 
 #bloco01{
@@ -188,13 +234,14 @@ footer > div{
 }
                     /* 3°tela */
 @media screen and (max-width: 800px) {
-    /* body{
+    body{
         border: 2px solid rgb(0, 4, 255);
-       } */
+       }
 
        hr{
         width: 600px;
         margin: auto;
+        margin-bottom: 3vw;
     }
 
     /* #bloco01{
@@ -209,13 +256,14 @@ footer > div{
 
                     /* 4°tela */
     @media screen and  (max-width: 667px){
-        /* body{
+        body{
             border: 2px solid rgb(234, 0, 255);
-           } */
+           }
 
            hr{
             width: 400px;
             margin: auto;
+            margin-bottom: 3vw;
         }
 
         
@@ -241,9 +289,9 @@ footer > div{
         }
                     /* 5°tela */
     @media screen and (max-width: 480px){
-     /* body{
+     body{
       border: 2px solid rgb(255, 115, 0);
-       } */
+       }
 
        #bloco01{
         display: flex;
@@ -270,6 +318,8 @@ footer > div{
     hr{
         width: 300px;
         margin: auto;
+        margin-top: 5vw;
+        margin-bottom: 5vw;
     }
 
     #bloco02 > div{
@@ -293,4 +343,38 @@ footer > div{
         height: 300px;
         object-fit: contain;
     }
+
+    #principal-main{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        text-align: center;
+        margin: 5vw;  
+        
+      }
+      
+      #principal-main > #control01{
+          margin: 5px;
+          font-size: 20px;
+      }
+       
+      ul > li{
+          font-size: 20px;
+      }
+      
+      #principal-main > #control02{
+          margin: 5px;
+          font-size: 20px;
+      }
+      
+      #principal-main > hr{
+         margin-top: 2vw;
+      }
+      .bloco00{
+          font-size: 20px;
+      }
+      .bloco00 > h2,p{
+          margin: 1vw;
+      }
     }
