--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@ hr{
     /* padding-bottom: 0px; */
 }
 
+#kkk > #container > a{
+    text-decoration: none;
+}
+
 #container::after{
     content: " ";
     width: 0%;
